@@ -1,3 +1,15 @@
+2010-05-27  Chris Fleizach  <cfleizach@apple.com>
+
+        No review, build fixage.
+
+        Bug 39324 - AX: WebKit doesn't call [super -accessibilityAttributeValue:attribute forParameter:] when it encounters a parameterized attribute that it doesn't handle.
+        https://bugs.webkit.org/show_bug.cgi?id=39324
+
+        Rolling out change from r60307 until a better fix is ready.
+
+        * accessibility/mac/AccessibilityObjectWrapper.mm:
+        (-[AccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):
+
 2010-05-27  Yury Semikhatsky  <yurys@chromium.org>
 
         Reviewed by Pavel Feldman.
